--- a/css/memory.scss
+++ b/css/memory.scss
@@ -13,28 +13,28 @@
 .gameTable {display: table;}
 .gameRow {display: table-row;}
 .gameCell {
-  display: table-cell;
-  font-size: $fontSize;
-  cursor: pointer;
-  z-index: 0;
-  @include padMargin;
+  	display: table-cell;
+  	font-size: $fontSize;
+  	cursor: pointer;
+  	z-index: 0;
+  	@include padMargin;
   
-  &:hover {
-    z-index: 1;
-    @extend %colorCursor;
-  }
+  	&:hover {
+    	z-index: 1;
+    	@extend %colorCursor;
+  	}
 }
 
 .glyphicon {
-  color: $primiaryColor;
+  	color: $primiaryColor;
 }
 .glyphicon-question-sign {
-  @include padMargin;
-  font-size: $fontSize;
+  	@include padMargin;
+  	font-size: $fontSize;
   
-  &:hover {
-    @extend %colorCursor;
-  }
+  	&:hover {
+    	@extend %colorCursor;
+  	}
 }
 
 .buttonRow { /* handles display of container for buttons */
@@ -51,14 +51,14 @@
 	transform: translateY(-1px); // offset push for min-height of col-md-#
 }
 .center-block {
-  text-align: center;
+  	text-align: center;
 }
 .noDisplay {
-  color: red;
-  cursor: none;
-  display: table-cell;
-  @include padMargin;
-  font-size: $fontSize;
+  	color: red;
+  	cursor: none;
+  	display: table-cell;
+  	@include padMargin;
+  	font-size: $fontSize;
 }
 
 #questionContainer, #message, #inGameMenu, #buttons {
@@ -73,7 +73,7 @@
 }
 
 #message {
-  @include padMargin(5px,0);
+  	@include padMargin(5px,0);
 }
 
 #inGameMenu {
@@ -89,24 +89,24 @@
     }
 }
 #inGameMenu, #gameField, #question {
-  display: none;
+	display: none;
 }
 
 .container {
-  color: $starEmptyColor;
+	color: $starEmptyColor;
 }
 
 // general button setup
 div[id^='button'], #menuReset, #menuContinue {
-  font-size: 3em;
-  text-align: center;
-  cursor: pointer;
-  @include padMargin(5px,5px);
-  @include borderRadius(15px,15px,15px,15px);
-  background: $primiaryColor;
+	font-size: 3em;
+	text-align: center;
+	cursor: pointer;
+	@include padMargin(5px,5px);
+	@include borderRadius(15px,15px,15px,15px);
+	background: $primiaryColor;
   
-  &:hover {
-    @extend %colorCursor;
+  	&:hover {
+    	@extend %colorCursor;
   }
 }
 /* bootstrap button override */
@@ -128,62 +128,68 @@ div[id^='button'], #menuReset, #menuContinue {
     }
 }
 
+// for 5x5 and 6x6, the padding left/right needs to be bigger
+.gameRow .col-md-2 {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
 /* unclickable icon shouldn't have a cursor */
 .glyphicon-star-empty {
-  cursor: none !important;
-  color: $starEmptyColor;
+  	cursor: none !important;
+  	color: $starEmptyColor;
   
-  &:hover {
-    color: $starEmptyColor;
-  }
+  	&:hover {
+    	color: $starEmptyColor;
+  	}
 }
 
 /* clicked animation */
 @-webkit-keyframes pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+  	to {
+    	-webkit-transform: scale(1.3);
+    	transform: scale(1.3);
     }
 }
 @keyframes pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-  }
+  	to {
+    	-webkit-transform: scale(1.3);
+    	transform: scale(1.3);
+  	}
 }
 .gameCell {
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.gameCell:hover, .gameCell:focus, .gameCell:active {
-  -webkit-animation-name: pulse-grow;
-  animation-name: pulse-grow;
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	&:hover, &focus, &:active {
+		-webkit-animation-name: pulse-grow;
+		animation-name: pulse-grow;
+		-webkit-animation-duration: 0.4s;
+		animation-duration: 0.4s;
+		-webkit-animation-timing-function: linear;
+		animation-timing-function: linear;
+		-webkit-animation-iteration-count: infinite;
+		animation-iteration-count: infinite;
+		-webkit-animation-direction: alternate;
+		animation-direction: alternate;
+	}
 }
 
 /* undo the hovering effect for the non-clickable icon */
 .glyphicon-star-empty:hover, .glyphicon-star-empty:focus, .glyphicon-star-empty:active {
-  -webkit-animation-name: steady;
-  animation-name: steady;
+  	-webkit-animation-name: steady;
+  	animation-name: steady;
 }
 @-webkit-keyframes steady {
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+  	to {
+    	-webkit-transform: scale(1);
+    	transform: scale(1);
     }
 }
 @keyframes steady {
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
+  	to {
+    	-webkit-transform: scale(1);
+    	transform: scale(1);
+  	}
 }
 
 
