adjusted the size of the reset/continue buttons

--- a/css/memory.scss
+++ b/css/memory.scss
@@ -13,48 +13,52 @@
 .gameTable {display: table;}
 .gameRow {display: table-row;}
 .gameCell {
-  display: table-cell;
-  font-size: $fontSize;
-  cursor: pointer;
-  z-index: 0;
-  @include padMargin;
+  	display: table-cell;
+  	font-size: $fontSize;
+  	cursor: pointer;
+  	z-index: 0;
+  	@include padMargin;
   
-  &:hover {
-    z-index: 1;
-    @extend %colorCursor;
-  }
+  	&:hover {
+    	z-index: 1;
+    	@extend %colorCursor;
+  	}
 }
 
 .glyphicon {
-  color: $primiaryColor;
+  	color: $primiaryColor;
 }
 .glyphicon-question-sign {
-  @include padMargin;
-  font-size: $fontSize;
+  	@include padMargin;
+  	font-size: $fontSize;
   
-  &:hover {
-    @extend %colorCursor;
-  }
+  	&:hover {
+    	@extend %colorCursor;
+  	}
 }
+
 .buttonRow { /* handles display of container for buttons */
     background: $background;
     margin: 0 auto;
     width: 100%;
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
+    @include borderRadius(0, 0, 15px, 15px);
 }
 .table { /* change Bootstrap's default background color */
   background: none !important;
 }
+.noBottomMargin {
+	margin-top: -20px; // offset for Bootstraps' table margin
+	transform: translateY(-1px); // offset push for min-height of col-md-#
+}
 .center-block {
-  text-align: center;
+  	text-align: center;
 }
 .noDisplay {
-  color: red;
-  cursor: none;
-  display: table-cell;
-  @include padMargin;
-  font-size: $fontSize;
+  	color: red;
+  	cursor: none;
+  	display: table-cell;
+  	@include padMargin;
+  	font-size: $fontSize;
 }
 
 #questionContainer, #message, #inGameMenu, #buttons {
@@ -64,100 +68,149 @@
     font-family: FontAwesome;
     font-size: 1.75em;
 }
+#questionContainer {
+	@include borderRadius(0,0,15px,15px);
+}
 
 #message {
-  @include padMargin(5px,0);
+  	@include padMargin(5px,0);
 }
 
 #inGameMenu {
-    border-radius: 0 0 5px 5px;
+	@include borderRadius;
     display: none;
     padding: 5px;
     width: 82px;
     cursor: pointer;
     background: $primiaryColor;
+    margin: 0 auto;
     
     &:hover {
       background: $secondarColor;
     }
 }
 #inGameMenu, #gameField, #question {
-  display: none;
+	display: none;
 }
+
+#score {
+	text-align: center;
+}
+
+.translateMinusY {
+	transform: translateY(-1px);
+}
+
 .container {
-  color: $starEmptyColor;
+	color: $starEmptyColor;
 }
 
 // general button setup
 div[id^='button'], #menuReset, #menuContinue {
-  font-size: 3em;
-  text-align: center;
-  cursor: pointer;
-  @include padMargin(5px,5px);
-  border-radius: 15px;
-  background: $primiaryColor;
+	font-size: 1.5em;
+	text-align: center;
+	cursor: pointer;
+	margin: 0;
+	padding: 0 15px 0 15px;
+	@include borderRadius(15px,15px,15px,15px);
+	background: $primiaryColor;
   
-  &:hover {
-    @extend %colorCursor;
+  	&:hover {
+    	@extend %colorCursor;
   }
+}
+
+#start {
+	background: #8abcf7;
+	border-radius: 0 0 10px 10px;
+}
+
+/* bootstrap button override */
+.btn-toolbar {
+	padding: 0 0 15px;
+}
+.btn-group-lg > .btn {
+	font-size: 2.5em;
+	@include borderRadius(15px,15px,15px,15px);
+}
+.btn-default {
+	background: $primiaryColor;
+	border-color: $primiaryColor;
+    color: $starEmptyColor;
+    &:hover {
+    	background: $primiaryColor;
+		border-color: $primiaryColor;
+	    color: $secondarColor;
+    }
+}
+
+// for 5x5 and 6x6, the padding left/right needs to be bigger
+.gameRow .col-md-2 {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+/* custom.css override */
+body {
+	margin-top: 0;
 }
 
 /* unclickable icon shouldn't have a cursor */
 .glyphicon-star-empty {
-  cursor: none !important;
-  color: $starEmptyColor;
+  	cursor: none !important;
+  	color: $starEmptyColor;
   
-  &:hover {
-    color: $starEmptyColor;
-  }
+  	&:hover {
+    	color: $starEmptyColor;
+  	}
 }
 
 /* clicked animation */
 @-webkit-keyframes pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
+  	to {
+    	-webkit-transform: scale(1.3);
+    	transform: scale(1.3);
     }
 }
 @keyframes pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-  }
+  	to {
+    	-webkit-transform: scale(1.3);
+    	transform: scale(1.3);
+  	}
 }
 .gameCell {
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.gameCell:hover, .gameCell:focus, .gameCell:active {
-  -webkit-animation-name: pulse-grow;
-  animation-name: pulse-grow;
-  -webkit-animation-duration: 0.4s;
-  animation-duration: 0.4s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	&:hover, &focus, &:active {
+		-webkit-animation-name: pulse-grow;
+		animation-name: pulse-grow;
+		-webkit-animation-duration: 0.4s;
+		animation-duration: 0.4s;
+		-webkit-animation-timing-function: linear;
+		animation-timing-function: linear;
+		-webkit-animation-iteration-count: infinite;
+		animation-iteration-count: infinite;
+		-webkit-animation-direction: alternate;
+		animation-direction: alternate;
+	}
 }
 
 /* undo the hovering effect for the non-clickable icon */
 .glyphicon-star-empty:hover, .glyphicon-star-empty:focus, .glyphicon-star-empty:active {
-  -webkit-animation-name: steady;
-  animation-name: steady;
+  	-webkit-animation-name: steady;
+  	animation-name: steady;
 }
 @-webkit-keyframes steady {
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
+  	to {
+    	-webkit-transform: scale(1);
+    	transform: scale(1);
     }
 }
 @keyframes steady {
-  to {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
+  	to {
+    	-webkit-transform: scale(1);
+    	transform: scale(1);
+  	}
 }
 
 
