--- a/css/memory.css
+++ b/css/memory.css
@@ -1,177 +1,2 @@
-.gameTable {display: table;}
-.gameRow {display: table-row;}
-.gameCell {
-	display: table-cell;
-	padding: 15px;
-	font-size: 72px;
-	cursor: pointer;
-	z-index: 0;
-}
-.gameCell:hover {
-	z-index: 1;
-}
-.glyphicon {
-	color: #0288D1;
-}
-.gameCell:hover, .glyphicon-question-sign:hover {
-	color: #03A9F4;
-	cursor: pointer;
-}
-.glyphicon-question-sign {
-	padding: 15px;
-	font-size: 72px;
-}
-.buttonRow { /* handles display of container for buttons */
-	background: #8abcf7;
-	margin: 0 auto;
-    width: 100%;
-    border-bottom-left-radius: 7px;
-    border-bottom-right-radius: 7px;
-}
-.table { /* change Bootstrap's default background color */
-	background: none !important;
-}
-.center-block {
-	text-align: center;
-}
-.noDisplay {
-	color: red;
-	cursor: none;
-	display: table-cell;
-	padding: 15px;
-	font-size: 72px;
-}
-
-#message, #inGameMenu, #buttons {
-	text-align: center;
-    background: #8abcf7;
-    color: #ffffff;
-    font-family: FontAwesome;
-    font-size: 1.75em;
-}
-
-#message {
-	padding: 5px;
-}
-
-#inGameMenu {
-    border-radius: 0 0 5px 5px;
-    display: none;
-    padding: 5px;
-    width: 82px;
-    cursor: pointer;
-    background: #0288D1;
-}
-#inGameMenu:hover {
-	background: #03A9F4;
-}
-#inGameMenu, #gameField, #question {
-	display: none;
-}
-.container {
-	color: #212121;
-}
-div[id^='button']:hover {
-	cursor: pointer;
-	background: #03A9F4;
-}
-div[id^='button'] {
-	font-size: 3em;
-	text-align: center;
-	cursor: pointer;
-	padding: 5px;
-	margin: 5px;
-	border-radius: 5px;
-	background: #0288D1;
-}
-
-/* unclicked icon shouldn't have a cursor icon */
-.glyphicon-star-empty {
-	cursor: none !important;
-	color: #212121;
-}
-.glyphicon-star-empty:hover {
-	color: #212121;
-}
-
-/* clicked animation */
-@-webkit-keyframes pulse-grow {
-	to {
-		-webkit-transform: scale(1.3);
-		transform: scale(1.3);
-		}
-}
-@keyframes pulse-grow {
-	to {
-		-webkit-transform: scale(1.3);
-		transform: scale(1.3);
-	}
-}
-.gameCell {
-	-webkit-transform: translateZ(0);
-	transform: translateZ(0);
-}
-.gameCell:hover, .gameCell:focus, .gameCell:active {
-	-webkit-animation-name: pulse-grow;
-	animation-name: pulse-grow;
-	-webkit-animation-duration: 0.4s;
-	animation-duration: 0.4s;
-	-webkit-animation-timing-function: linear;
-	animation-timing-function: linear;
-	-webkit-animation-iteration-count: infinite;
-	animation-iteration-count: infinite;
-	-webkit-animation-direction: alternate;
-	animation-direction: alternate;
-}
-
-/* undo the hovering effect for the non-clickable icon */
-.glyphicon-star-empty:hover, .glyphicon-star-empty:focus, .glyphicon-star-empty:active {
-	-webkit-animation-name: steady;
-	animation-name: steady;
-}
-@-webkit-keyframes steady {
-	to {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-		}
-}
-@keyframes steady {
-	to {
-		-webkit-transform: scale(1);
-		transform: scale(1);
-	}
-}
-
-
-/* experiments */
-/*
-.flipped {
-	color: green;
-	animation: flipping 1s 0s;
-}
-*/
-/*
-@keyframes flipping {
-	0% {
-			transform: scale(1,1);
-			opacity: 100;
-		}
-	100% {
-			transform: scale(0,1);
-			opacity: 0;
-		}
-}
-*/
-/*
-cool pulsating effect
-@keyframes flipping {
-    0% {color:green}
-    50% {color:yellow}
-    100% {color:green}
-}
-#dd_main2 {
-  transition-property: top, left;
-  transition-duration: 1s, 1s;
-  transition-delay: 0s, 1s;
-}
- */
+.gameCell:hover,.glyphicon-question-sign:hover,div[id^='button']:hover,#menuReset:hover,#menuContinue:hover{color:#03A9F4;cursor:pointer}.gameTable{display:table}.gameRow{display:table-row}.gameCell{display:table-cell;font-size:72px;cursor:pointer;z-index:0;padding:15px;margin:0}.gameCell:hover{z-index:1}.glyphicon{color:#0288D1}.glyphicon-question-sign{padding:15px;margin:0;font-size:72px}.buttonRow{background:#8abcf7;margin:0 auto;width:100%;border-radius:0 0 15px 15px}.table{background:none !important}.noBottomMargin{margin-top:-20px;transform:translateY(-1px)}.center-block{text-align:center}.noDisplay{color:red;cursor:none;display:table-cell;padding:15px;margin:0;font-size:72px}#questionContainer,#message,#inGameMenu,#buttons{text-align:center;background:#8abcf7;color:#ffffff;font-family:FontAwesome;font-size:1.75em}#questionContainer{border-radius:0 0 15px 15px}#message{padding:5px;margin:0}#inGameMenu{border-radius:0 0 7px 7px;display:none;padding:5px;width:82px;cursor:pointer;background:#0288D1;margin:0 auto}#inGameMenu:hover{background:#03A9F4}#inGameMenu,#gameField,#question{display:none}#score{text-align:center}.translateMinusY{transform:translateY(-1px)}.container{color:#212121}div[id^='button'],#menuReset,#menuContinue{font-size:1.5em;text-align:center;cursor:pointer;margin:0;padding:0 15px 0 15px;border-radius:15px 15px 15px 15px;background:#0288D1}#start{background:#8abcf7;border-radius:0 0 10px 10px}.btn-toolbar{padding:0 0 15px}.btn-group-lg>.btn{font-size:2.5em;border-radius:15px 15px 15px 15px}.btn-default{background:#0288D1;border-color:#0288D1;color:#212121}.btn-default:hover{background:#0288D1;border-color:#0288D1;color:#03A9F4}.gameRow .col-md-2{padding-left:20px;padding-right:20px}body{margin-top:0}.glyphicon-star-empty{cursor:none !important;color:#212121}.glyphicon-star-empty:hover{color:#212121}@-webkit-keyframes pulse-grow{to{-webkit-transform:scale(1.3);transform:scale(1.3)}}@keyframes pulse-grow{to{-webkit-transform:scale(1.3);transform:scale(1.3)}}.gameCell{-webkit-transform:translateZ(0);transform:translateZ(0)}.gameCell:hover,.gameCellfocus,.gameCell:active{-webkit-animation-name:pulse-grow;animation-name:pulse-grow;-webkit-animation-duration:0.4s;animation-duration:0.4s;-webkit-animation-timing-function:linear;animation-timing-function:linear;-webkit-animation-iteration-count:infinite;animation-iteration-count:infinite;-webkit-animation-direction:alternate;animation-direction:alternate}.glyphicon-star-empty:hover,.glyphicon-star-empty:focus,.glyphicon-star-empty:active{-webkit-animation-name:steady;animation-name:steady}@-webkit-keyframes steady{to{-webkit-transform:scale(1);transform:scale(1)}}@keyframes steady{to{-webkit-transform:scale(1);transform:scale(1)}}
+/*# sourceMappingURL=memory.css.map */
